@@ -1,3 +1,13 @@
+Thu Jul  1 10:32:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/tests/Parsing/run_test.pl:
+          Print a message when a test succeeded
+
+        * DAnCE/tests/Parsing/test.cpp:
+          Explicitly catch Config_Error, that exception is now passed through
+          to this test. Also initialize the DAnCE Logger so that we can get
+          more output during manual testing
+
 Thu Jul  1 09:02:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.mpc:
@@ -5,7 +15,7 @@ Thu Jul  1 09:02:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
 Thu Jul  1 08:57:21 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
-        *bin/ciao_tests.lst
+        * bin/ciao_tests.lst:
         Add AMI4CCM tutorial to list.
 
 Thu Jul  1 08:37:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
